ags css @import

--- a/modules/linux/desktop/ags/src/css/main.css
+++ b/modules/linux/desktop/ags/src/css/main.css
@@ -1,438 +1,7 @@
-:root {
-  --success: 40 255 40;
-  --error: 255 90 90;
-
-  --dark: 50 50 50;
-  --error-dark: 84 29 29;
-
-  --h-blue: 264;
-  --h-primary: 252; /* 254 */
-  --h-special: 282;
-  --h-active: 140;
-  --h-warning: 70;
-
-  /* black = "#5b6078" */
-  /* red = "#ed8796" */
-  /* green = "#a6da95" */
-  /* yellow = "#eed49f" */
-  /* blue = "#8aadf4" */
-  /* magenta = "#f5bde6" */
-  /* cyan = "#8bd5ca" */
-  /* white = "#a5adcb" */
-
-  /* catppuccin colors */
-  --color-text: oklch(0.8168 0.04 272.86);
-  --fg-text: oklch(from var(--color-text) 0.822 c h);
-  --fg-text-mono: oklch(from var(--fg-text) 0.88 c h);
-  --fg-text-bright: oklch(from var(--color-text) 0.91 c h);
-  --fg-text-white: oklch(from var(--color-text) 0.99 0.001 h);
-
-  --color-mocha-background: oklch(0.2429 0.03 283.91);
-  --color-blue: oklch(0.7497 0.11 263.81);
-  --color-inactive: oklch(0.606 0.051 274.27);
-  --color-orange: oklch(82.37% 0.101 52.63);
-  --color-yellow: oklch(87.9% 0.074 84.75);
-  --color-green: oklch(83.5% 0.108 138.15);
-  --color-mauve: oklch(78.71% 0.119 304.77);
-  --color-lavender-rgb: #b7bdf8;
-  --color-lavender: oklch(from var(--color-lavender-rgb) l c h);
-
-  --fg-warning: oklch(from var(--color-orange) l c h / 0.97);
-  --bg-warning: oklch(from var(--color-orange) calc(l * 0.4) calc(c * 0.5) h / 0.5);
-  --fg-inactive: oklch(from var(--color-inactive) l c h / 0.95);
-  --bg-inactive: oklch(from var(--color-inactive) l c h / 0.11);
-  --fg-yellow: oklch(from var(--color-yellow) l c h / 0.9);
-  --bg-yellow: oklch(from var(--color-yellow) calc(l * 0.4) calc(c * 0.5) h / 0.5);
-  --fg-green: oklch(from var(--color-green) l c h / 0.95);
-  --bg-green: oklch(from var(--color-green) calc(l * 0.45) calc(c * 0.75) h / 0.5);
-  /*****************************************/
-
-  --color-primary: var(--color-blue);
-
-  --color-active-01: oklch(72.5% 0.225 var(--h-active));
-  --color-active: var(--color-active-01);
-
-  --color-special-01: oklch(67% 0.162 var(--h-special));
-  --color-special: var(--color-special-01);
-
-  --color-bar-background: oklch(from var(--color-mocha-background) l c h / 0.75);
-
-  --color-bar-border: oklch(from var(--color-lavender) calc(l * 0.8) calc(c * 0.8) h / 0.8);
-
-  --bar-border: 3.5px solid var(--color-bar-border);
-
-  --border-opacity: 0.99;
-  --internal-border-opacity: 0.8;
-  --border-width: 1.5px;
-
-  --status-entry-border-color: oklch(from var(--color-primary) l c h / var(--border-opacity));
-  --status-entry-border: var(--border-width) solid var(--status-entry-border-color);
-  --status-entry-internal-border-color: oklch(
-    from var(--status-entry-border-color) l c h / var(--internal-border-opacity)
-  );
-  --status-entry-internal-border: var(--border-width) solid
-    var(--status-entry-internal-border-color);
-  --status-entry-background: rgb(var(--dark) / 0.8);
-  --status-entry-padding: 1px 4px;
-
-  --status-entry {
-    border-radius: 9999px;
-    border: var(--status-entry-border);
-    background: var(--status-entry-background);
-    padding: 0 0px;
-    > * {
-      padding: var(--status-entry-padding);
-      border-radius: 0;
-      border-width: 0;
-    }
-    > *:not(:last-child) {
-      border-right: var(--status-entry-internal-border);
-    }
-    > *:first-child {
-      border-top-left-radius: 9999px;
-      border-bottom-left-radius: 9999px;
-    }
-    > *:last-child {
-      border-top-right-radius: 9999px;
-      border-bottom-right-radius: 9999px;
-    }
-  }
-
-  --sans {
-    font-family: "Symbols Nerd Font Mono", "Inter", sans;
-  }
-  --mono {
-    font-family: "Symbols Nerd Font Mono", "JetBrains Mono", monospace;
-    font-weight: 700;
-    color: var(--fg-text-mono);
-    font-size: 12px;
-  }
-}
-
-.icon {
-  font-size: 14px;
-  -gtk-icon-palette:
-    success rgb(var(--success) / 0.8),
-    warning oklch(from var(--fg-warning) l c h / 0.8),
-    error rgb(var(--error) / 0.8);
-}
-
-.icon-material {
-  font-family: "Material Symbols Sharp", "Material Symbols Rounded", "Material Symbols Outlined";
-  font-family: "Material Symbols Outlined", "Material Symbols Sharp", "Material Symbols Rounded";
-  font-size: 18px;
-  margin: -1px;
-  font-weight: 700;
-}
-
-.bar {
-  @apply --sans;
-  background: transparent;
-  color: var(--fg-text);
-  font-size: 12.5px;
-  font-weight: 600;
-  .bar-left {
-    > * {
-      margin-right: 6px;
-    }
-  }
-  .bar-center {
-    & > * {
-      margin: 0 6px;
-    }
-  }
-  .bar-right {
-    > * {
-      margin-left: 6px;
-    }
-    > *:first-child {
-      margin-left: 0px;
-    }
-  }
-}
-
-.outer {
-  padding: 4px;
-  background: var(--color-bar-background);
-
-  min-height: 24px;
-
-  .task.active .bar {
-    border-color: oklch(from var(--fg-green) l c h);
-  }
-
-  .bar.bar-bottom & {
-    border-bottom: 0;
-    border-top: var(--bar-border);
-    min-height: 24px;
-  }
-
-  .bar.bar-top & {
-    border-top: 0;
-    border-bottom: var(--bar-border);
-  }
-}
-
-button {
-  min-height: 0;
-  min-width: 0;
-  border-radius: 0;
-  background: rgb(var(--dark) / 0.6);
-  font-weight: 700;
-  color: var(--fg-text-white);
-
-  &:hover {
-    background: rgb(var(--dark) / 0.3);
-  }
-  &:active {
-    background: rgb(var(--dark) / 0.15);
-  }
-}
-
-.circular {
-  font-size: 4.5px;
-  min-width: 14px;
-  min-height: 14px;
-}
-
-.workspaces {
-  > * {
-    margin-right: 6px;
-  }
-  > *:last-child {
-    margin-right: 0px;
-  }
-}
-
-.workspaces-group {
-  border-radius: 9999px;
-  background: var(--status-entry-background);
-  padding: 0;
-
-  button {
-    @apply --mono;
-    font-weight: 800;
-    padding: 0 1px;
-    min-width: 1.4em;
-    background: transparent;
-    border: 1.5px solid var(--status-entry-border-color);
-    &:not(.first) {
-      border-left-width: 0.75px;
-    }
-    &:not(.last) {
-      border-right-width: 0.75px;
-    }
-    &.first {
-      border-top-left-radius: 9999px;
-      border-bottom-left-radius: 9999px;
-      padding: 0;
-      padding-left: 3px;
-    }
-    &.last {
-      border-top-right-radius: 9999px;
-      border-bottom-right-radius: 9999px;
-      padding: 0;
-      padding-right: 3px;
-    }
-    &.first.last {
-      padding: 0 1px;
-    }
-    &.focused {
-      background: oklch(from var(--color-primary) calc(l * 0.9) c h / 0.6);
-      .outer.active & {
-        background: oklch(from var(--color-primary) calc(l * 0.8) c h / 0.85);
-        color: oklch(from var(--fg-text-white) l c h / 0.96);
-      }
-    }
-  }
-}
-
-.notification {
-  color: var(--fg-warning);
-}
-
-.client-title {
-  margin-right: 6em;
-  & > label {
-    padding: 0 10px;
-    background: var(--status-entry-background);
-    border: var(--status-entry-border);
-    border-radius: 9999px;
-    min-width: 2em;
-  }
-}
-
-.datetime {
-  @apply --status-entry;
-  padding-left: 1px;
-  padding-right: 1px;
-}
-
-.systray {
-  @apply --status-entry;
-  padding: 0px;
-  button {
-    &:hover {
-      background: white(0.08);
-    }
-    .icon {
-      font-size: 15px;
-    }
-  }
-}
-
-menu {
-  @apply --sans;
-  padding: 2px;
-  background: rgba(30, 30, 30, 0.875);
-  border: 2px solid rgba(0, 0, 0, 1);
-  font-size: 13px;
-  color: #d8d8d8;
-  button,
-  label {
-    font-weight: 600;
-  }
-  button,
-  item {
-    padding: 6px;
-    margin: 0;
-  }
-}
-
-.battery {
-  @apply --status-entry;
-}
-
-.volume {
-  @apply --status-entry;
-
-  .status {
-    > box {
-      margin-top: -1px;
-      .circular {
-        color: var(--color-blue);
-      }
-    }
-  }
-}
-
-.cpu-group {
-  @apply --status-entry;
-  border-color: var(--fg-yellow);
-  background: var(--bg-yellow);
-  .icon {
-    font-size: 15px;
-  }
-
-  .cputemp {
-    label {
-      @apply --mono;
-      font-weight: 700;
-      margin-right: -1px;
-      padding-left: 1px;
-    }
-    &.critical .icon {
-      color: rgb(var(--error) / 0.8);
-    }
-    &.high .icon {
-      color: oklch(from var(--fg-warning) l c calc(h - 6) / 0.95);
-    }
-    &.medium .icon {
-      color: oklch(from var(--fg-warning) l c h / 0.9);
-    }
-    &.low .icon {
-      color: oklch(from var(--fg-warning) l c calc(h + 22) / 0.88);
-    }
-  }
-}
-
-.media-event-box {
-  .media {
-    @apply --status-entry;
-    border-width: 1.8px;
-    border-color: var(--fg-inactive);
-    background: var(--bg-inactive);
-    > *:not(:last-child) {
-      border-right-color: var(--fg-inactive);
-    }
-    .icon.player {
-      font-size: 15px;
-    }
-  }
-  &:hover {
-    background: white(0.05);
-  }
-}
-
-.tasks {
-  @apply --status-entry;
-  border-width: 2.5px;
-  /* padding: 0px 1px; */
-  .state {
-    min-height: 25px;
-    padding-right: 4px;
-    margin-left: -3px;
-    font-size: 16px;
-    font-weight: 700;
-  }
-  .timer {
-    @apply --mono;
-    font-size: 13.5px;
-  }
-  .timer {
-    color: oklch(from var(--fg-text-mono) l c h / 0.975);
-  }
-  .task {
-    color: oklch(from var(--fg-text-bright) l c h / 0.95);
-  }
-  > * {
-    padding: 0px 6px;
-  }
-  > *:not(:last-child) {
-    border-right-width: 2.5px;
-  }
-  .icon.state {
-    font-size: 18px;
-    padding-left: 0;
-    padding-right: 4px;
-  }
-  &.active {
-    border-color: oklch(from var(--fg-green) l c h / 1);
-    background-color: var(--bg-green);
-    color: var(--fg-text-bright);
-    .task {
-      font-size: 13.5px;
-    }
-    > *:not(:last-child) {
-      border-right-color: oklch(from var(--fg-green) l c h / 1);
-    }
-  }
-  &.short-break {
-    border-color: oklch(from var(--color-special) l c h / 0.95);
-    background-color: oklch(from var(--color-special) l c h / 0.15);
-    > *:not(:last-child) {
-      border-right-color: oklch(from var(--color-special) l c h / 0.95);
-    }
-  }
-  &.long-break {
-    border-color: oklch(from var(--color-special) l c h / 0.95);
-    background-color: oklch(from var(--color-special) l c h / 0.15);
-    > *:not(:last-child) {
-      border-right-color: oklch(from var(--color-special) l c h / 0.95);
-    }
-  }
-  &.waiting {
-    .icon.state {
-      padding: 0;
-      padding-left: 1px;
-      margin-right: -2px;
-    }
-    border-color: var(--fg-warning);
-    > * {
-      background-color: var(--bg-warning);
-    }
-    > *:not(:last-child) {
-      border-right-color: var(--fg-warning);
-    }
-  }
-}
+@import "./base.css";
+@import "./bar.css";
+@import "./notification.css";
+@import "./workspaces.css";
+@import "./status.css";
+@import "./systray.css";
+@import "./tasks.css";
