--- a/modules/linux/desktop/ags/src/css/main.css
+++ b/modules/linux/desktop/ags/src/css/main.css
@@ -3,5 +3,6 @@
 @import "./notification.css";
 @import "./workspaces.css";
 @import "./status.css";
+@import "./media.css";
 @import "./systray.css";
 @import "./tasks.css";
