--- a/modules/linux/desktop/ags/src/css/workspaces.css
+++ b/modules/linux/desktop/ags/src/css/workspaces.css
@@ -15,7 +15,7 @@
   button {
     @apply --mono;
     font-weight: 800;
-    padding: 0 1px;
+    padding: 0;
     min-width: 1.4em;
     background: transparent;
     border: 1.5px solid var(--status-entry-border-color);
@@ -29,22 +29,23 @@
       border-top-left-radius: 9999px;
       border-bottom-left-radius: 9999px;
       padding: 0;
-      padding-left: 3px;
+      padding-left: 2px;
     }
     &.last {
       border-top-right-radius: 9999px;
       border-bottom-right-radius: 9999px;
       padding: 0;
-      padding-right: 3px;
+      padding-right: 2px;
     }
     &.first.last {
       padding: 0 1px;
     }
     &.focused {
-      background: oklch(from var(--color-primary) calc(l * 0.9) c h / 0.6);
+      background: oklch(from var(--color-primary) calc(l * 0.8) calc(c * 1.25) h / 0.6);
+      color: oklch(from var(--fg-text-white) l c h / 0.91);
       .outer.active & {
-        background: oklch(from var(--color-primary) calc(l * 0.8) c h / 0.85);
-        color: oklch(from var(--fg-text-white) l c h / 0.96);
+        background: oklch(from var(--color-primary) calc(l * 0.8) calc(c * 1.25) h / 0.98);
+        color: oklch(from var(--fg-text-white) l c h / 0.98);
       }
     }
   }
