--- a/modules/linux/desktop/ags/src/css/status.css
+++ b/modules/linux/desktop/ags/src/css/status.css
@@ -29,6 +29,14 @@
     font-size: 15px;
   }
 
+  .cpu-speed {
+    label.mhz {
+      @apply --mono;
+      font-weight: 700;
+      margin-right: -1px;
+      padding-left: 2px;
+    }
+  }
   .cputemp {
     label {
       @apply --mono;
@@ -48,23 +56,5 @@
     &.low .icon {
       color: oklch(from var(--fg-warning) l c calc(h + 22) / 0.88);
     }
-  }
-}
-
-.media-event-box {
-  .media {
-    @apply --status-entry;
-    border-width: 1.8px;
-    border-color: var(--fg-inactive);
-    background: var(--bg-inactive);
-    > *:not(:last-child) {
-      border-right-color: var(--fg-inactive);
-    }
-    .icon.player {
-      font-size: 15px;
-    }
-  }
-  &:hover {
-    background: white(0.05);
   }
 }
