small ags changes

--- a/modules/linux/desktop/ags/src/css/systray.css
+++ b/modules/linux/desktop/ags/src/css/systray.css
@@ -1,7 +1,10 @@
 .systray {
-  @apply --status-entry;
+  /* @apply --status-entry; */
   padding: 0px;
-  button {
+  > * {
+    @apply --status-entry;
+  }
+  > {
     &:hover {
       background: white(0.08);
     }
