--- a/modules/linux/desktop/ags/src/css/notification.css
+++ b/modules/linux/desktop/ags/src/css/notification.css
@@ -1,3 +1,18 @@
-.notification {
-  color: var(--fg-warning);
+box.notification {
+  color: var(--fg-black);
+  background: var(--color-mauve);
+  border-radius: 9999px;
+  padding: 0 9px;
+
+  & > .icon {
+    margin-bottom: -1px;
+    padding-right: 4px;
+  }
+
+  & > button {
+    color: var(--fg-black);
+    font-weight: 700;
+    background: transparent;
+    padding: 0;
+  }
 }
