--- a/modules/linux/desktop/ags/src/css/systray.css
+++ b/modules/linux/desktop/ags/src/css/systray.css
@@ -1,8 +1,11 @@
 .systray {
-  /* @apply --status-entry; */
   padding: 0px;
+  margin-right: -6px;
   > * {
     @apply --status-entry;
+  }
+  > *:last-child {
+    margin-right: 6px;
   }
   > {
     &:hover {
