--- a/modules/linux/desktop/ags/src/css/media.css
+++ b/modules/linux/desktop/ags/src/css/media.css
@@ -1,5 +1,6 @@
 .media-event-box {
   .media {
+    margin-left: 6px;
     @apply --status-entry;
     border-color: var(--fg-inactive);
     background: var(--bg-inactive);
