ags/hyprland changes

--- a/modules/linux/desktop/ags2/style.css
+++ b/modules/linux/desktop/ags2/style.css
@@ -1,14 +1,15 @@
 /* https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-24/gtk/theme/Adwaita/_colors-public.scss */
 
 :root {
-  --bar-bg: oklch(0.175 0.05 283.91 / 0.75);
+  --bar-bg: oklch(0.185 0.045 283.91 / 0.8);
+  --bar-border: oklch(from var(--bar-bg) calc(l * 1.5) calc(c * 1.5) h / 0.4);
 
-  --text: oklch(0.8168 0.04 272.86 / 1);
+  --text: oklch(0.8168 0.04 272.86 / 0.98);
   --blue0: oklch(0.7497 0.11 263.81);
   --blue: oklch(0.65 0.11 260);
 
-  --section-bg: oklch(from var(--text) l c h / 0.05);
-  /* --section-bg: white(0.01); */
+  --border-color: oklch(from var(--bar-bg) 0.5 0.1 h / 0.625);
+  --section-bg: oklch(from var(--border-color) l c h / 0.1);
 
   --section-spacing: 3px;
 }
@@ -17,20 +18,23 @@ window.Bar {
   font-family: "sans";
   font-weight: 700;
   font-size: 12.5px;
+
+  border-bottom: 3px solid var(--bar-border);
+
   color: var(--text);
   background: var(--bar-bg);
-  border-bottom: 1.5px solid oklch(from var(--bar-bg) calc(l * 1.5) calc(c * 1) h / 0.75);
 
   > centerbox {
-    padding: 2px 4px;
+    padding: 3px 4px;
+    > .Right {
+      margin-right: 12px;
+    }
   }
 }
 
-/* button {} */
-
 .section {
-  padding: 2px 8px;
-  border: 1.8px solid oklch(from var(--bar-bg) 0.5 0.1 h / 0.7);
+  padding: 1px 6px;
+  border: 2.4px solid var(--border-color);
   border-radius: 9999px;
   background: var(--section-bg);
   .Left & {
@@ -45,38 +49,40 @@ window.Bar {
 }
 
 .section.WorkspaceGroup {
-  padding: 1px 10px;
+  padding: 1px 7px;
 }
 
 .Workspace {
-  &:not(:last-child) {
-    margin-right: 5px;
-  }
   font-family: "monospace";
   font-weight: 800;
   font-size: 12.5px;
-  color: oklch(from var(--text) 0.85 c h / 0.95);
-  &.focused {
-    color: oklch(from var(--text) 0.85 c h / 0.95);
-  }
+
   &.active {
-    color: oklch(0.89 0.16 138);
+    color: oklch(0.92 0.14 118);
     &.focused {
       color: oklch(0.92 0.2 138);
     }
   }
+
+  &:not(:last-child) {
+    margin-right: 5px;
+  }
 }
 
 .section.ActiveTitle {
-  /* font-size: 12.5px; */
-  min-width: 100px;
+  min-width: 130px;
 }
 
-button.TrayItem {
+.section.Tray {
+  padding: 1px 3px;
+}
+
+.TrayItem {
   padding: 0px;
   border: 0px;
   border-radius: 9999px;
   min-height: 18px;
+
   icon {
     padding: 0px;
     margin: 0px;
@@ -85,9 +91,20 @@ button.TrayItem {
   }
 }
 
-.section.Tray {
-  padding: 1px 3px;
-}
+.section.Volume {
+  padding: 2px 6px;
 
-/* .Date {} */
-/* .Time {} */
+  icon {
+    font-size: 14px;
+    margin-right: 4px;
+    margin-left: -1px;
+    margin-bottom: 1px;
+  }
+
+  .VolumeProgress {
+    padding-top: 1px;
+    padding-bottom: 2px;
+    font-size: 4px;
+    color: oklch(0.72 0.18 132);
+  }
+}
