--- a/modules/linux/desktop/ags2/style.css
+++ b/modules/linux/desktop/ags2/style.css
@@ -7,11 +7,20 @@
   --text: oklch(0.8168 0.04 272.86 / 0.98);
   --blue0: oklch(0.7497 0.11 263.81);
   --blue: oklch(0.65 0.11 260);
+  --green: oklch(0.72 0.18 132);
 
   --border-color: oklch(from var(--bar-bg) 0.5 0.1 h / 0.625);
   --section-bg: oklch(from var(--border-color) l c h / 0.1);
 
   --section-spacing: 3px;
+}
+
+.icon-material {
+  font-family: "Material Symbols Sharp", "Material Symbols Rounded", "Material Symbols Outlined";
+  font-family: "Material Symbols Outlined", "Material Symbols Sharp", "Material Symbols Rounded";
+  font-size: 17px;
+  margin: -1px 0;
+  font-weight: 700;
 }
 
 window.Bar {
@@ -105,6 +114,25 @@ window.Bar {
     padding-top: 1px;
     padding-bottom: 2px;
     font-size: 4px;
-    color: oklch(0.72 0.18 132);
+    color: var(--green);
+  }
+}
+
+.section.Media {
+  padding: 0px 3px;
+  label.PlayerIcon {
+    margin-right: 7px;
+  }
+  label.title {
+    margin: 0 3px;
+  }
+  label.PlaybackStatus {
+    &.playing {
+      color: var(--green);
+    }
+    &.paused,
+    &.stopped {
+      color: oklch(from var(--text) calc(l * 0.85) c h);
+    }
   }
 }
